# curator

./: pyproject.toml  requirements.txt  setup.cfg  setup.py
curator/cli_singletons/: utils.py
