[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "curator"
version = "5.6.0"
authors = [
  { name="CriticalSTART", email="infrastructure@criticalstart.com" },
]
description = "Common library for all CriticalSTART python repositories"
dynamic = ["dependencies"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Framework :: Django"
]

[project.urls]
"Homepage" = "https://github.com/AdvancedThreatAnalytics/curator"

[tool.setuputils.dynamic]
dependencies = { file = ["requirements.txt"] }
